update to new structure