@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -10,12 +11,53 @@
 	<artifactId>${artifactId}</artifactId>
 	<packaging>jar</packaging>
 	<name>${rootArtifactId} Service module</name>
-	<properties>
-		<eclipselink.version>2.5.2</eclipselink.version>
-	</properties>
+
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>1.3.0.Final</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
+
 	<dependencies>
+
 		<dependency>
-			<groupId>com.sadad</groupId>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eu.ingwar.tools</groupId>
+			<artifactId>arquillian-suite-extension</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+
+
+		<dependency>
+			<groupId>${groupId}</groupId>
 			<artifactId>${rootArtifactId}-model</artifactId>
 		</dependency>
 		<dependency>
@@ -30,10 +72,75 @@
 			<groupId>com.sadad</groupId>
 			<artifactId>sadad-card-util</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>${eclipselink.version}</version>
-		</dependency>
 	</dependencies>
+
+
+	<profiles>
+		<profile>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<id>wlp</id>
+			<dependencies>
+				<dependency>
+					<groupId>io.openliberty.arquillian</groupId>
+					<artifactId>arquillian-liberty-managed</artifactId>
+					<version>1.0.2</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>net.wasdev.wlp.maven.plugins</groupId>
+						<artifactId>liberty-maven-plugin</artifactId>
+						<configuration>
+							<serverName>TestServer</serverName>
+							<assemblyArtifact>
+								<groupId>com.ibm.websphere.appserver.runtime</groupId>
+								<artifactId>wlp-webProfile7</artifactId>
+								<version>${liberty.version}</version>
+								<type>zip</type>
+							</assemblyArtifact>
+							<configFile>src/test/resources/test-server.xml</configFile>
+							<bootstrapProperties>
+								<db2DriverLocation>${project.basedir}/../libs/db2</db2DriverLocation>
+							</bootstrapProperties>
+							<installAppPackages>all</installAppPackages>
+							<clean>true</clean>
+							<features>
+								<acceptLicense>true</acceptLicense>
+							</features>
+							<arquillianProperties>
+								<appDeployTimeout>600</appDeployTimeout>
+								<javaVmArguments>-Xmx1024m -XX:MaxPermSize=512m	-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n</javaVmArguments>
+
+							</arquillianProperties>
+							<skipIfArquillianXmlExists>false</skipIfArquillianXmlExists>
+						</configuration>
+						<executions>
+							<execution>
+								<id>stop-server-before-clean</id>
+								<phase>pre-clean</phase>
+								<goals>
+									<goal>stop-server</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>create-test-server</id>
+								<phase>process-test-resources</phase>
+								<goals>
+									<goal>create-server</goal>
+									<goal>configure-arquillian</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+	</profiles>
+
+
 </project>
